--- a/src/ui/component/common/Popup.pug
+++ b/src/ui/component/common/Popup.pug
@@ -24,17 +24,17 @@ style.
 		position fixed
 		top 0
 		width 100dvw
-		z-index 10
+		z-index 100
 	.popup-body
-		background var(--c-subreddit-theme)
-		border-radius 12px
+		background var(--c-bg)
+		border-radius 1em
 		box-shadow 0 0 24px var(--c-blend-weak)
-		color var(--c-subreddit-theme-text)
-		max-height 96dvh
-		max-width 700px
+		max-height 90dvh
+		max-width 90dvw
 		overflow auto
-		padding 2em
+		padding 1em
 		position relative
+		width 960px
 	.popup-overlay
 		background var(--c-shade-strong)
 		height 100%
