--- a/src/ui/component/post/PostTag.pug
+++ b/src/ui/component/post/PostTag.pug
@@ -14,16 +14,17 @@ data.post-tag(class='post-tag-{name}' title={description}) {name}
 
 style.
 	.post-tag
-		border-radius 999px
-		font-feature-settings 'cpsp', 'ss01'
+		align-items center
+		border-radius 11px
+		display inline-flex
 		font-size 10px
-		font-weight var(--f-wght-strong)
+		font-weight bold
+		letter-spacing 1px
 		line-height 1
-		letter-spacing 0.666px
-		height 20px
 		padding 5px 10px
 		text-transform uppercase
 		user-select none
+		white-space nowrap
 	.post-tag-archived
 		background tan
 		color white
@@ -31,7 +32,7 @@ style.
 		background gray
 		color white
 	.post-tag-nsfw
-		background pink
+		background indianred
 		color white
 	.post-tag-oc
 		background cornflowerblue
