--- a/src/ui/component/user/account/LoginButton.pug
+++ b/src/ui/component/user/account/LoginButton.pug
@@ -20,4 +20,4 @@ script.
 		'wikiread'
 	]
 
-Button(link={api.getLoginURL({ memoString: location.pathname, scopeArray: scopes })} text='Login → ')
+Button(link={api.getLoginURL({ memoString: location.pathname, scopeArray: scopes })} text='Login')
