--- a/src/ui/overlay/NetworkStatusOverlay.pug
+++ b/src/ui/overlay/NetworkStatusOverlay.pug
@@ -1,8 +1,8 @@
 script.
 	import { onMount, onDestroy } from 'svelte'
 
-	import api from '../../../api/index.js'
-	import { Time, TimeSource } from '../../../lib/index.js'
+	import api from '../../api/index.js'
+	import { Time, TimeSource } from '../../lib/index.js'
 
 	offline = false
 	ratelimit_remaining_ratio = 1
