--- a/src/ui/component/feed/FeedLink.pug
+++ b/src/ui/component/feed/FeedLink.pug
@@ -13,42 +13,49 @@ script.
 		when 'subreddit' then subreddit_name
 		when 'user' then user_name
 
-a.feed-link(class="feed-link-{type}" href={format_url({ collection_id, multireddit_name, subreddit_name, user_name })}) {label}
+a.feed-link(class="feed-link-type-{type}" href={format_url({ collection_id, multireddit_name, subreddit_name, user_name })})
+	span.feed-link-text(title={label}) {label}
 
 style.
 	.feed-link
 		align-items center
 		border-radius 12px
 		display inline-flex
+		max-width 100%
 		padding-right 0.7em
 		text-transform lowercase
-		&.feed-link-collection
+		white-space pre
+		&.feed-link-type-collection
 			background wheat
 			color black
-		&.feed-link-multireddit
+		&.feed-link-type-multireddit
 			background darkseagreen
 			color white
-		&.feed-link-subreddit
+		&.feed-link-type-subreddit
 			background coral
 			color white
-		&.feed-link-user
+		&.feed-link-type-user
 			background lightskyblue
 			color white
 	.feed-link::before
 		border-radius 999px
-		color white
+		color var(--c-text-weak)
 		display inline
 		font-size 0.8em
+		font-weight bold
 		height 1.25em
 		line-height 1.25
 		margin-left 0.2em
 		margin-right 0.4em
 		padding 0 0.5em
-	.feed-link-collection::before
+	.feed-link-text
+		overflow hidden
+		text-overflow ellipsis
+	.feed-link-type-collection::before
 		content 'c/'
-	.feed-link-multireddit::before
+	.feed-link-type-multireddit::before
 		content 'm/'
-	.feed-link-subreddit::before
+	.feed-link-type-subreddit::before
 		content 'r/'
-	.feed-link-user::before
+	.feed-link-type-user::before
 		content 'u/'
