--- a/src/ui/component/feed/collection/CollectionInfo.pug
+++ b/src/ui/component/feed/collection/CollectionInfo.pug
@@ -1,22 +1,43 @@
 script.
 	import api from '../../../../api/index.js'
+	import FeedLink from '../FeedLink.pug'
 
 	export id = null
 	
 	collection = null
+	loading = null
 
 	api.loadWatch(api.ID('collection', id), (x) ->
-		{ data: collection } = x
+		{ data: collection, loading } = x
 	)
 
-aside.collection-info
-	{#if collection}
-		{#if collection.title}
-			p {collection.title}
+{#if loading}
+	.collection-info-loading Loading...
+{:else if collection}
+	.collection-info
+		h1.collection-info-name {collection.title}
+		cite.collection-info-subreddit
+			| in
+			FeedLink(subreddit_name={collection.subreddit} type='subreddit')
+		cite.collection-info-author
+			| by
+			FeedLink(type='user' user_name={collection.owner})
 
 style.
 	.collection-info
 		display flex
 		flex-flow column nowrap
 		gap 2em
-		width 480px
+	.collection-info-author
+		color var(--c-text-weak)
+		display flex
+		gap 0.666em
+	.collection-info-loading
+		color var(--c-text-weak)
+	.collection-info-name
+		font-size 1.333em
+		font-weight var(--f-wght-strong)
+	.collection-info-subreddit
+		color var(--c-text-weak)
+		display flex
+		gap 0.666em
