--- a/src/ui/component/feed/subreddit/ReportDialog.pug
+++ b/src/ui/component/feed/subreddit/ReportDialog.pug
@@ -40,27 +40,31 @@ script.
 form.report-menu
 	{#if site_rules && subreddit}
 		{#if subreddit.free_form_reports}
-			fieldset.report-menu-subreddit-freeform-report
-				TextInput(autofocus={true} enter_action={value => value && dispatch('submit', value)} placeholder='Enter custom reason')
-				span.report-menu-hint ...or click a reason below:
+			section
+				h1.report-menu-section-header Custom report
+				fieldset.report-menu-subreddit-freeform-report
+					TextInput(autofocus={true} enter_action={value => value && dispatch('submit', value)} placeholder='Type reason and press Enter...')
+					span.report-menu-hint ...or click a reason below:
 		{#if subreddit_rules.length}
-			fieldset.report-menu-subreddit-rules
-				{#each subreddit_rules as rule}
-					label.report-menu-rule.report-menu-subreddit-rule(title={rule.description})
-						span Subreddit rule \#{rule.priority + 1}
-						h1.report-menu-subreddit-rule-violation-name {rule.violation_reason}
-						p.report-menu-subreddit-rule-violation-description
-							FormattedHTML(html={rule.description_html || ''})
+			section
+				h1.report-menu-section-header Subreddit rules
+				fieldset.report-menu-subreddit-rules
+					{#each subreddit_rules as rule}
+						label.report-menu-rule.report-menu-subreddit-rule(title={rule.description})
+							span.report-menu-subreddit-rule-number \#{rule.priority + 1}
+							h1.report-menu-subreddit-rule-violation-name {rule.violation_reason}
+							.report-menu-subreddit-rule-violation-description
+								FormattedHTML(html={rule.description_html || ''})
+							input.report-menu-rule-button(on:change={e => dispatch('submit', e.target.value)} type='radio' value={rule.violation_reason})
+							.report-menu-rule-gradient-fade
+		section
+			h1.report-menu-section-header Sitewide rules
+			fieldset.report-menu-site-rules
+				{#each site_rules as rule}
+					label.report-menu-rule.report-menu-site-rule(title={rule.violation_reason})
+						h1.report-menu-site-rule-violation-name {rule.violation_reason}
 						input.report-menu-rule-button(on:change={e => dispatch('submit', e.target.value)} type='radio' value={rule.violation_reason})
 						.report-menu-rule-gradient-fade
-			hr
-		fieldset.report-menu-site-rules
-			{#each site_rules as rule}
-				label.report-menu-rule.report-menu-site-rule(title={rule.violation_reason})
-					span Site rule
-					h1.report-menu-site-rule-violation-name {rule.violation_reason}
-					input.report-menu-rule-button(on:change={e => dispatch('submit', e.target.value)} type='radio' value={rule.violation_reason})
-					.report-menu-rule-gradient-fade
 
 style.
 	.report-menu
@@ -69,7 +73,7 @@ style.
 		gap 1em
 	.report-menu-rule
 		aspect-ratio 1
-		border 1px solid
+		background var(--c-con-weak)
 		cursor pointer
 		display inline-flex
 		flex-flow column nowrap
@@ -83,22 +87,27 @@ style.
 	.report-menu-rule-button
 		display none
 	.report-menu-rule-gradient-fade
-		background linear-gradient(to top, var(--c-subreddit-theme) 0px, transparent)
+		background linear-gradient(to top, var(--c-bg) 0px, transparent)
 		bottom 0
 		height 37%
 		left 0
 		pointer-events none
 		position absolute
 		width 100%
+	.report-menu-section-header
+		color var(--c-text-weak)
+		font-size 1em
+		padding 1ch
+		text-transform uppercase
 	.report-menu-site-rule
 		border-radius 6px
 	.report-menu-site-rule-violation-name
-		font-size 13px
+		font-size 12px
+		line-height 1.25
 	.report-menu-site-rules
 		display grid
-		font-size 0.75em
 		grid-auto-flow row
-		grid-template-columns 1fr 1fr 1fr 1fr 1fr
+		grid-template-columns repeat(9, 1fr)
 		gap 6px
 	.report-menu-subreddit-freeform-report
 		align-items center
@@ -106,14 +115,18 @@ style.
 		gap 9px
 	.report-menu-subreddit-rule
 		border-radius 9px
+		word-break break-word
+	.report-menu-subreddit-rule-number
+		font-size 12px
 	.report-menu-subreddit-rule-violation-name
 		font-size 1rem
+		line-height 1.333
 	.report-menu-subreddit-rule-violation-description
 		color var(--c-text-weak)
 		font-size 12px
+		line-height 1.25
 	.report-menu-subreddit-rules
 		display grid
-		font-size 0.75em
 		grid-auto-flow row
-		grid-template-columns 1fr 1fr 1fr
+		grid-template-columns repeat(5, 1fr)
 		gap 9px
