--- a/src/ui/component/feed/subreddit/SubredditAvatar.pug
+++ b/src/ui/component/feed/subreddit/SubredditAvatar.pug
@@ -16,7 +16,7 @@ a.subreddit-avatar(class='subreddit-avatar-size-{size}' href='/{subreddit ? subr
 		source(srcset={icon_url})
 		source(srcset={subreddit?.community_icon})
 		source(srcset={subreddit?.icon_img})
-		img.subreddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/logo.svg')
+		img.subreddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/brand_circle.svg')
 
 style.
 	.subreddit-avatar
@@ -29,8 +29,8 @@ style.
 		object-fit cover
 		width 100%
 	.subreddit-avatar-size-large
-		height 64px
+		width 64px
 	.subreddit-avatar-size-medium
-		height 32px
+		width 32px
 	.subreddit-avatar-size-small
-		height 16px
+		width 16px
