--- a/src/ui/component/feed/subreddit/SubredditWikiPage.pug
+++ b/src/ui/component/feed/subreddit/SubredditWikiPage.pug
@@ -1,13 +1,12 @@
 script.
-	import { getContext, tick } from 'svelte'
+	import { tick } from 'svelte'
 
 	import api from '../../../../api/index.js'
 	import { Time } from '../../../../lib/index.js'
 	import { format_url } from '../../../url/index.js'
 	
-	import Error from '../../common/Error.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
-	import SubredditAvatar from './SubredditAvatar.pug'
+	import Status from '../../common/Status.pug'
 	
 	export page_name = null
 	export revision_id = null
@@ -16,46 +15,34 @@ script.
 	error = null
 	loading = false
 	page = null
-	set_theme_colors = getContext('set_theme_colors')
 
-	if page_name == 'pages'
-		api.loadWatch(api.ID('wiki_pages', subreddit_name),
-			(x) ->
-				{ data: page, error, loading } = x
-		)
-	else
-		api.loadWatch(api.ID('wiki', subreddit_name, page_name, revision_id),
-			(x) ->
-				{ data: page, error, loading } = x
-				if location.hash and page
-					# a common wiki use case is to load a wiki page directly at a specific heading
-					# since the heading may not exist at the time the browser would normally do the scroll, we need to handle it
-					# it's not worth it to support this handling for other views, but this is a special case
-					await tick()
-					document.getElementById(location.hash[1..])?.scrollIntoView()
-		)
-	api.loadWatch(api.ID('subreddit', subreddit_name), (x) ->
-		{ data: subreddit } = x
-		set_theme_colors(subreddit?.primary_color, subreddit?.key_color)
+	api.loadWatch(api.ID('subreddit_wikipage', subreddit_name, page_name, revision_id),
+		(x) ->
+			{ data: page, error, loading } = x
+			if location.hash and page
+				# a common wiki use case is to load a wiki page directly at a specific heading
+				# since the heading may not exist at the time the browser would normally do the scroll, we need to handle it
+				# it's not worth it to support this handling for other views, but this is a special case
+				await tick()
+				document.getElementById(location.hash[1..])?.scrollIntoView()
 	)
 
 svelte:head
-	title {subreddit_name.toLowerCase()} wiki → {page_name.toLowerCase()}
+	title Wiki | {page_name.toLowerCase()} - {subreddit_name.toLowerCase()}
 {#if error}
 	{#if error?.code === 403}
 		{#if error.reason === 'private'}
-			Error(message="Only approved users can access this subreddit." title="Private subreddit")
+			Status(type='error' message="Only approved users can access this subreddit." title="Private subreddit")
 		{:else}
-			Error(message="Only moderators of this subreddit can access the wiki." title="Mod-only wiki")
+			Status(type='error' message="Only moderators of this subreddit can access the wiki." title="Mod-only wiki")
 	{:else if error.reason}
-		Error(message="An error occurred. This is the best description we have of the error." title="Error: {error.reason}")
+		Status(type='error' message="An error occurred. This is the best description we have of the error." title="Error: {error.reason}")
 	{:else}
-		Error(message="An unknown error occurred." title="Unknown error")
+		Status(type='error' message="An unknown error occurred." title="Unknown error")
 {:else if loading}
 	p Loading...
 {:else if page}
 	article.wiki
-		SubredditAvatar(name={subreddit_name})
 		section.wiki-path
 			a(href='/{subreddit_name}/wiki') Wiki
 			{#each page_name.split('/').slice(0, page_name.split('/').length - 1) as path_segment, i}
@@ -79,14 +66,11 @@ svelte:head
 
 style.
 	.wiki
-		width 640px
+		width 480px
 	.wiki-body
 		margin-top 2em
-		:global(& > .md)
-			background var(--c-subreddit-theme)
-			border-radius 1em
-			color var(--c-subreddit-theme-text)
-			padding 10px 1em
+	.wiki-edit-date
+		cursor help
 	.wiki-info
 		align-items center
 		color var(--c-text-weak)
@@ -107,21 +91,24 @@ style.
 		display none
 		max-height 100vh
 		overflow auto
-		padding 4em 0
+		padding 64px 0
 		position fixed
-		right calc((100vw - 1360px) / 8)
+		left calc(50% + 320px)
 		scrollbar-width none
 		top 0
-		width 320px
+		width 180px
 		&::-webkit-scrollbar
 			display none
-		@media (min-width: 1360px)
+		@media (min-width: 1024px)
 			display initial
+		@media (min-width: 1280px)
+			width 300px
 	:global(.wiki .toc a)
 		color inherit
 		padding 0
+		text-decoration none
 	:global(.wiki .toc a:hover)
-		color var(--c-subreddit-theme-text)
+		color var(--c-text-strong)
 	:global(.wiki .toc + *)
 		margin-top 0
 	:global(.wiki .toc li)
