--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -3,7 +3,7 @@ script.
 
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
-	import { format_url, relativize_url } from '../../url/index.js'
+	import { apply_query_parameters, format_url, relativize_url } from '../../url/index.js'
 	import AccountState from '../../state/AccountState.coffee'
 	import html_embeds from './embeds/html_embeds.coffee'
 	import iframe_embeds from './embeds/iframe_embeds.coffee'
@@ -11,7 +11,7 @@ script.
 	import BanDialog from '../feed/subreddit/BanDialog.pug'
 	import Button from '../common/Button.pug'
 	import CommentEditor from './CommentEditor.pug'
-	import Error from '../common/Error.pug'
+	import FeedLink from '../feed/FeedLink.pug'
 	import FormattedHTML from '../common/FormattedHTML.pug'
 	import Popup from '../common/Popup.pug'
 	import PostComments from './PostComments.pug'
@@ -20,9 +20,8 @@ script.
 	import PostTag from './PostTag.pug'
 	import PostVideoPlayer from './PostVideoPlayer.pug'
 	import ReportDialog from '../feed/subreddit/ReportDialog.pug'
-	import SubredditAvatar from '../feed/subreddit/SubredditAvatar.pug'
+	import Status from '../common/Status.pug'
 	import UserByline from '../user/UserByline.pug'
-	import Warning from '../common/Warning.pug'
 	
 	export comments_initial_count = 200
 	export comments_sort = null
@@ -33,7 +32,7 @@ script.
 
 	banning = false
 	comments_sort_options = [
-		{ label: 'Best', value: 'confidence' }
+		{ label: 'Hot', value: 'confidence' }
 		{ label: 'Top', value: 'top' }
 		{ label: 'Q&A', value: 'qa' }
 		{ label: 'Old', value: 'old' }
@@ -73,7 +72,12 @@ script.
 	reply_error = null
 	reply_sending = false
 	reporting = false
-	set_theme_colors = getContext('set_theme_colors')
+	score_text = (post) ->
+		switch
+			when post.hide_score then '?'
+			when !Number.isFinite(post.score) then '?'
+			when post.score < 1 then '−?'
+			else post.score - 1
 	
 	interact = (action_type, data) ->
 		switch action_type
@@ -119,11 +123,6 @@ script.
 		{ data: post, error, loading } = x
 		if post?.suggested_sort && !comments_sort
 			comments_sort = post.suggested_sort
-		if expanded and post?.subreddit
-			api.loadWatch(api.ID('subreddit', post.subreddit), (x) ->
-				{ data: subreddit } = x
-				set_theme_colors(subreddit?.primary_color, subreddit?.key_color)
-			)
 	)
 	api.preload(api.ID('post', id, comments_sort or 'confidence', comments_initial_count, focus_comment_id, focus_comment_parent_count))
 	if expanded
@@ -131,75 +130,99 @@ script.
 
 svelte:head
 	{#if expanded && post}
-		title {post.subreddit} → {post.title}
+		title {post.title} - {post.subreddit}
 {#if error}
 	{#if error.code === 403}
-		Error(message="This post is in a private subreddit which you are not approved to access." title="Private subreddit")
+		Status(type='error' message="This post is in a private subreddit which you are not approved to access." title="Private subreddit")
 	{:else if error.code === 404}
-		Error(message="This subreddit was closed permanently by Reddit admins." title="Subreddit banned")
+		Status(type='error' message="This subreddit was closed permanently by Reddit admins." title="Subreddit banned")
 	{:else if error.reason}
-		Error(message="An error occurred. This is the best description we have of the error." title="Error: {error.reason}")
+		Status(type='error' message="An error occurred. This is the best description we have of the error." title="Error: {error.reason}")
 	{:else}
-		Error(message="An unknown error occurred." title="Unknown error")
+		Status(type='error' message="An unknown error occurred." title="Unknown error")
 {:else if post}
 	article.post-and-comments(class:post-and-comments-expanded={expanded})
-		article.post(class:post-downvoted={post.likes === false} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
+		article.post(class:post-downvoted={post.likes === false} class:post-upvoted={post.likes === true} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)} title="{Time.sToAbsRelTimeStr(post.created_utc)}{post.edited ? ', edited ' + Time.sToAbsRelTimeStr(post.edited) : ''}")
 			header.post-header
-				{#if api.isLoggedIn()}
-					button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null}) {post.hide_score ? '?' : post.score}
-				{:else}
-					data.post-score {post.hide_score ? '?' : post.score}
-				.post-subreddit
-					SubredditAvatar(name={post.subreddit} size='medium')
-				{#if post.link_flair_text || post.locked || post.over_18 || post.spoiler || post.stickied}
-					ol.post-tags
-						{#if post.link_flair_text}
-							PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} subreddit_name={post.subreddit} text={post.link_flair_text})
-						{#if post.spoiler}
-							PostTag(name='spoiler')
-						{#if post.over_18}
-							PostTag(name='nsfw')
-						{#if post.stickied}
-							PostTag(name='sticky')
-						{#if post.locked}
-							PostTag(name='locked')
-				h1.post-title {post.title}
-				UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
-			{#if expanded}
-				section.post-body
-					{#if post.removed_by_category}
-						{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
-							Error(message="Post deleted by author.")
-						{:else if post.removed_by_category === 'automod_filtered'}
-							Error(message="Post removed by AutoModerator.")
-						{:else if post.removed_by_category === 'content_takedown'}
-							Error(message="Post removed by Reddit due to site policy violation(s).")
-						{:else if post.removed_by_category === 'copyright_takedown'}
-							Error(message="Post removed by Reddit due to a copyright notice.")
-						{:else if post.removed_by_category === 'moderator'}
-							Error(message="Post removed by a moderator.")
-						{:else if post.removed_by_category === 'reddit'}
-							Error(message="Post removed by Reddit's spam filter.")
+				{#if expanded}
+					section.post-meta
+						{#if api.isLoggedIn()}
+							button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown|stopPropagation={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown|stopPropagation={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null} title={post.hide_score ? 'score hidden' : post.score < 1 ? 'negative score (value hidden)' : post.score - 1})
+								| {score_text(post)}
+								{#if post.upvote_ratio < 0.7}
+									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
 						{:else}
-							Error(message="Post removed by Reddit (reason not specified).")
-					{:else if focus_comment_id}
-						Warning(message="Viewing a single comment.")
-							Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post →')
-					{:else if post.format === 'talk'}
-						Error(message="Reddit Talks are only available on the official site.")
-							Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
-					{:else if post.selftext || post.format !== 'self'}
+							data.post-score(title={post.hide_score ? 'score hidden' : post.score - 1})
+								| {score_text(post)}
+								{#if post.upvote_ratio < 0.7}
+									span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+						UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author} score={post.score} score_controversiality={1 - post.upvote_ratio} score_hidden={post.hide_score})
+						{#if post.link_flair_text || post.spoiler || post.over_18 || post.stickied || post.locked}
+							ol.post-tags
+								{#if post.link_flair_text}
+									PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} size='medium' subreddit_name={post.subreddit} text={post.link_flair_text})
+								{#if post.spoiler}
+									PostTag(name='spoiler')
+								{#if post.over_18}
+									PostTag(name='nsfw')
+								{#if post.stickied}
+									PostTag(name='sticky')
+								{#if post.locked}
+									PostTag(name='locked')
+				{:else}
+					section.post-stats
+						{#if post.stickied}
+							span Sticky
+							| ·
+						{#if post.spoiler}
+							span Spoiler
+							| ·
+						{#if post.over_18}
+							span NSFW
+							| ·
+						data.post-date-relative(title={Time.sToAbsTimeStr(post.created_utc)}) {Time.sToAbsRelTimeStr(post.created_utc)}
+						| ·
+						data.post-stats-score(title={post.hide_score ? 'score hidden' : post.score - 1})
+							| {score_text(post)}
+							{#if post.upvote_ratio < 0.7}
+								span.post-score-controversial-marker(title='controversial post ({Math.trunc(post.upvote_ratio * 100)}% upvoted)') †
+				h1.post-title {post.title}
+			{#if expanded}
+				{#if post.removed_by_category}
+					{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
+						Status(type='error' message="Deleted by author.")
+					{:else if post.removed_by_category === 'automod_filtered'}
+						Status(type='error' message="Removed by AutoModerator.")
+					{:else if post.removed_by_category === 'content_takedown'}
+						Status(type='error' message="Removed by Reddit due to site policy violation(s).")
+					{:else if post.removed_by_category === 'copyright_takedown'}
+						Status(type='error' message="Removed by Reddit due to a copyright notice.")
+					{:else if post.removed_by_category === 'moderator'}
+						Status(type='error' message="Removed by a moderator.")
+					{:else if post.removed_by_category === 'reddit'}
+						Status(type='error' message="Removed by Reddit's spam filter.")
+					{:else}
+						Status(type='error' message="Removed by Reddit (reason not specified).")
+				{:else if focus_comment_id}
+					Status(type='warning' message="Viewing a single comment.")
+						Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post →')
+				{:else if post.format === 'talk'}
+					Status(type='error' message="Reddit Talks are only available on the official site.")
+						Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
+				{:else if post.selftext || post.format !== 'self'}
+					section.post-body
 						{#if post.format === 'crosspost'}
 							a.post-crosspost-link(href={format_url({ post_id: post.crosspost_parent })})
-								svelte:self(expanded={false} id={post.crosspost_parent})
+								svelte:self(expanded={false} id={post.crosspost_parent} out_of_context={true})
 						{:else if post.format === 'image'}
 							{#each post.media as media, i}
 								figure.post-gallery-image
 									a(href={media.image_url} rel='external noreferrer preconnect' target='_blank')
 										picture
 											{#if !media.is_gif}
+												source(srcset={media.image_url_960})
 												source(srcset={media.image_url_640})
-											img.post-image(alt='{i + 1} of {post.media.length}' src={media.image_url} style='aspect-ratio: {media.aspect_ratio}')
+											img.post-image(alt='' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; width: {media.source_width >= 480 ? '480px' : 'auto'}" title='{i + 1} / {post.media.length}')
 									{#if media.caption_text || media.caption_url}
 										figcaption.post-gallery-image-caption
 											{#if media.caption_text}
@@ -215,13 +238,11 @@ svelte:head
 											script(defer='true' src='https://platform.twitter.com/widgets.js')
 								{:else if iframe_embeds(post.url)}
 									{@const embed = iframe_embeds(post.url)}
-										<!-- svelte wants iframe "title" attribute, which interferes with fullscreen playback (tooltip obscuring screen) and anyway provides no additional info here beyond what's in the URL -->
-										<!-- svelte-ignore a11y-missing-attribute -->
-										iframe.post-iframe(allow={embed.iframe_allow} allowfullscreen='true' src={embed.iframe_url})
+										iframe.post-iframe(allow={embed.iframe_allow} allowfullscreen='true' src={embed.iframe_url} style='aspect-ratio: {embed.iframe_aspect_ratio || 1}' title='')
 								{:else}
-									a.md.post-link(href={relativize_url(post.url)} rel='external noopener preconnect') {relativize_url(post.url)}
+									a.post-link(href={relativize_url(post.url)} rel='external noopener preconnect') {link_domain(relativize_url(post.url)) + link_path(relativize_url(post.url))}
 						{:else if post.format === 'prediction'}
-							ol.md.post-predictions
+							ol.post-predictions
 								{#each post.tournament_data.predictions as prediction}
 									strong.post-prediction-title {prediction.title}
 									dl.post-prediction-options
@@ -230,17 +251,17 @@ svelte:head
 												dt
 													meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
 												dd {option.text}
-							Warning(message="Voting is only available on the official site.")
+							Status(type='warning' message="Voting is only available on the official site.")
 								Button(link={post.url} new_tab={true} text='View on Reddit')
 						{:else if post.format === 'video'}
 							{@const media = post.media[0]}
-								PostVideoPlayer(audio_url={media.video_audio_url} height={360 / media.video_aspect_ratio} video_url={media.video_url} width={360})
+								PostVideoPlayer(audio_url={media.video_audio_url} height={480 / media.video_aspect_ratio} video_url={media.video_url} width={480})
 						{#if post.selftext_html}
 							FormattedHTML(html={post.selftext_html})
 		{#if expanded}
 			article.post-comments
 				menu.post-comments-sort-controls
-					Button(action={value => internal_navigate({ href: location.origin + format_url({ post_comments_sort: value, post_id: id, subreddit_name: post.subreddit }) })} disabled={!post.num_comments} options={post.discussion_type === 'CHAT' ? comments_sort_options_chat : post.contest_mode ? comments_sort_options_contest : comments_sort_options} selected={comments_sort})
+					Button(action={value => internal_navigate({ href: apply_query_parameters({ comment_sort: value }) })} disabled={!post.num_comments} options={post.discussion_type === 'CHAT' ? comments_sort_options_chat : post.contest_mode ? comments_sort_options_contest : comments_sort_options} selected={comments_sort})
 					{#if comments_sort === 'new'}
 						PostCommentsAutorefreshButton(count={comments_initial_count} post_id={id})
 				{#if replying}
@@ -258,60 +279,60 @@ svelte:head
 
 style.
 	.post
-		background var(--c-theme)
-		box-sizing content-box
-		border-radius 12px
-		width 360px
-		&.post-with-low-score
-			opacity 0.5
-	.post-and-comments
-		width 100%
-		&.post-and-comments-expanded
-			padding-left calc(50% - 180px)
-			padding-right 40px
-	.post-body
 		align-items flex-start
 		display flex
-		border-top 2px solid var(--c-page-bg)
 		flex-flow column nowrap
-		gap 1px
-		position relative
-		:global(& > .md)
-			padding 8px 10px 9px 11px
+		gap 1.333em
+		width 100%
+		.post-and-comments-expanded &
+			width calc(480px + 2 * 1em)
+	.post-body
+		align-items flex-start
+		background var(--c-blend-weak)
+		border-radius 13px
+		display inline-flex
+		flex-flow column nowrap
+		gap 0.666em
+		padding 1em
 		:global(& .twitter-tweet)
 			margin 0 !important
-			width 360px !important
-		& > *:last-child
-		& > figure:last-child > *:last-child img
-			border-radius 0 0 12px 12px
+		:global(& .twitter-tweet iframe)
+			border-radius 11px
 	.post-comments
 		display flex
 		flex-flow column nowrap
 		gap 1.333em
-		margin-top 2em
+		margin-top 1.333em
 		width 100%
 	.post-gallery-image-caption
 		color var(--c-text-weak)
-		font-size 13px
-		letter-spacing 0.5px
-		padding 10px
-	.post-header
-		position relative
-		padding 10px
+		margin-top 0.333em
 	.post-iframe
 		aspect-ratio 1
-		background black
-		width 100%
+		background var(--c-text-faint)
+		border-radius 11px
+		width 480px
+		&:fullscreen
+			border-radius 0
 	.post-image
-		background black
-		width 360px
+		background var(--c-text-faint)
+		border-radius 11px
 	.post-link
+		font-family var(--f-family-mono)
+		line-height 1.333
 		text-decoration underline
 		word-break break-all
+	.post-meta
+		align-items center
+		background var(--c-blend-faint)
+		border-radius 4px
+		display inline-flex
+		margin-bottom 1em
 	.post-predictions
 		display flex
 		flex-flow column nowrap
 		gap 1em
+		padding 1em
 	.post-prediction-option
 		align-items center
 		display flex
@@ -319,27 +340,41 @@ style.
 		& meter
 			width 240px
 	.post-score
+		background none
+		border-radius 4px 0 0 4px
+		border-right 2px solid var(--c-bg)
 		color var(--c-text-weak)
-		padding 0.5ch 1ch
-		position absolute
-		right calc(100% + 1ch)
-		top -0.5ch
+		display flex
+		font-family var(--f-family-mono)
+		font-size 1.15em
+		font-weight var(--f-wght-strong)
+		line-height 1
+		padding 1px 6px
 		.post-upvoted &
-			color orangered
+			background var(--c-vote-up)
+			color black
 		.post-downvoted &
-			color var(--c-text-faint)
-	.post-subreddit
-		position absolute
-		right calc(100% + 2ch)
-		top 1.666em
+			background var(--c-vote-down)
+	.post-score-controversial-marker
+		cursor help
+		font-size 12px
+	.post-stats
+		color var(--c-text-weak)
+	.post-stats-score
+		line-height 1
 	.post-tags
 		display flex
 		flex-flow row wrap
-		gap 5px
-		margin-bottom 0.5em
+		gap 0.333em
 	.post-title
-		font-size 1.5em
-		font-weight var(--f-wght-strong)
-		letter-spacing calc(-1px/3)
-		line-height 1.25
+		font-size 1.1666em
+		font-weight 500
+		letter-spacing -0.1666px
+		line-height 1.333
 		overflow-wrap anywhere
+		.post-and-comments-expanded &
+			font-size 2em
+			font-stretch 125%
+			font-weight var(--f-wght-strong)
+			letter-spacing -1px
+			line-height 1.2
