--- a/src/ui/component/post/PostFlair.pug
+++ b/src/ui/component/post/PostFlair.pug
@@ -5,6 +5,7 @@ script.
 	export color = null
 	export emoji_style = null
 	export rich_text = null
+	export size = 'medium'
 	export subreddit_name = null
 	export text = null
 
@@ -22,7 +23,7 @@ script.
 				text_color = HexColor.contrast(background_color)
 		)
 
-span.post-flair(style="background-color: {background_color}; color: {text_color}" title={text})
+span.post-flair(class='post-flair-size-{size}' style="background-color: {background_color}; color: {text_color}" title={text})
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
@@ -37,19 +38,17 @@ span.post-flair(style="background-color: {background_color}; color: {text_color}
 
 style.
 	.post-flair
-		border-radius 999px
+		align-items center
+		border-radius 11px
 		display inline-flex
-		font-feature-settings 'calt', 'cpsp', 'ss01'
 		font-size 10px
-		font-weight var(--f-wght-strong)
+		font-weight bold
 		gap 5px
-		height 20px
-		letter-spacing 0.666px
+		letter-spacing 1px
 		line-height 1
 		padding 5px 10px
 		text-transform uppercase
 		user-select none
+		white-space nowrap
 	.post-flair-emoji
 		height 16px
-		margin 0 1px
-		margin-top -3px !important
