--- a/src/ui/component/user/UserFlair.pug
+++ b/src/ui/component/user/UserFlair.pug
@@ -1,40 +1,34 @@
 script.
 	import { HexColor } from '../../../lib/index.js'
 
-	export color = null
 	export emoji_style = null
 	export rich_text = null
 	export text = null
-	
-	if color
-		text_color = HexColor.contrast(color)
-	else
-		color = 'var(--c-subreddit-theme)'
-		text_color = 'var(--c-subreddit-theme-text)'
 
-span.user-flair(style="background: {color}; color: {text_color}" title={text})
+span.user-flair(title={text})
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
-				| {segment.t}
+				span.user-flair-fragment-text {segment.t}
 			{:else if segment.e === 'emoji' && emoji_style !== null}
 				{#if emoji_style === 'image'}
-					img.user-flair-emoji(alt={segment.a} src={segment.u} title={segment.a})
+					img.user-flair-fragment-emoji(alt={segment.a} src={segment.u} title={segment.a})
 				{:else if emoji_style === 'text'}
-					| {segment.a}
+					span.user-flair-fragment-text {segment.a}
 	{:else}
 		| {text}
 
 style.
 	.user-flair
-		border-radius 1em
+		align-items center
 		display inline-flex
-		flex 0 1 auto
+		gap 0.5ch
 		overflow hidden
-		padding 0 1em
-		white-space pre
-	.user-flair-emoji
-		border-radius 0
-		display inline-block
+		white-space nowrap
+	.user-flair-fragment-emoji
+		border-radius 9px
 		height 16px
-		margin-top 2px !important
+		cursor help
+	.user-flair-fragment-text
+		overflow hidden
+		text-overflow ellipsis
