--- a/src/ui/component/user/account/LogoutButton.pug
+++ b/src/ui/component/user/account/LogoutButton.pug
@@ -3,4 +3,4 @@ script.
 
 	import Button from '../../common/Button.pug'
 
-Button(action={() => { api.logout(); location.reload() }} text='→ Logout')
+Button(action={() => { api.logout(); location.reload() }} text='Logout')
