--- a/src/ui/overlay/AccountProviderOverlay.pug
+++ b/src/ui/overlay/AccountProviderOverlay.pug
@@ -1,7 +1,7 @@
 script.
-	import api from '../../../api/index.js'
+	import api from '../../api/index.js'
 
-	import Crash from '../../Crash.pug'
+	import Crash from '../Crash.pug'
 	
 	status = api.getLoginStatus()
 	user_loaded = false
